syntax = "proto3";

package cyan;

option go_package="cyan-api/proto/v1";

import "google/protobuf/empty.proto";

service ContainerService {
	rpc CreateRootContainer(google.protobuf.Empty) returns (ContainerRootResponse) {}
	rpc CreateContainer(ContainerCreateRequest) returns (ContainerCreateResponse) {}
	rpc GetContainer(ContainerGetRequest) returns (ContainerGetResponse) {}
	rpc GetInners(ContainerGetRequest) returns (ContainerInnersResponse) {}
//	rpc UpdateContainer(ContainerUpdateRequest) returns (ContainerUpdateResponse) {}
//	rpc DeleteContainer(ContainerDeleteRequest) returns (ContainerDeleteResponse) {}
}

message ContainerRootResponse {
	bool created = 1;
}

message ContainerCreateRequest {
	string path = 1;
	Container container = 2;
}

message ContainerGetRequest {
	string path = 1;
}

message ContainerUpdateRequest {
	string path = 1;
	Container new_container = 2;
}

message ContainerDeleteRequest {
	string path = 1;
}

message ContainerCreateResponse {
	bool created = 1;
	Container container = 2;
}

message ContainerGetResponse {
	Container container = 1;
}

message ContainerUpdateResponse {
	bool updated = 1;
	Container upd_container = 2;
}

message ContainerDeleteResponse {
	bool deleted = 1;
}

message ContainerInnersResponse {
	repeated Container inners = 1;
}

message Container {
	string name = 1;
	bool is_leaf = 2;
	map<string, string> meta_data = 3;
}